1.添加了默认 preferences.xml 2.添加 不kill 顶层包 功能

--- a/AssistiveTouch/res/layout/activity_main.xml
+++ b/AssistiveTouch/res/layout/activity_main.xml
@@ -57,6 +57,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+            <LinearLayout
+                android:id="@+id/save_top_pkg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/auto_update_view"
+                android:layout_below="@+id/auto_update_view"
+                android:gravity="center"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/enable_save_top_pkg" />
+
+                <CheckBox
+                    android:id="@+id/enable_save_top_pkg_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </RelativeLayout>
 
         <Button
